Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9308

Fix build errors with recent gcc (isfinite)

Details

    • 5.5.48-0

    Description

      mariadb-server/sql/item_func.h:235:26: error: ‘isfinite’ was not declared in this scope
      mariadb-server/sql/field.cc:2705:19: error: ‘isfinite’ was not declared in this scope

      Attachments

        Issue Links

          Activity

            danblack Daniel Black added a comment -

            include/my_global.h my_isfinite from MySQL-5.7 is worth looking at too.

            danblack Daniel Black added a comment - include/my_global.h my_isfinite from MySQL-5.7 is worth looking at too.
            danblack Daniel Black added a comment -

            As luck would have it, 5.2 complains if we use std::isfinite():

            /home/anton/mariadb-server/sql/item_func.h:235:17: error: expected
            unqualified-id before ‘(’ token
            return std::isfinite(value) ? value : raise_float_overflow();

            And 6.0 complains if we use isfinite():

            /home/anton/mariadb-server/sql/item_func.h:235:26: error: ‘isfinite’
            was not declared in this scope
            return isfinite(value) ? value : raise_float_overflow();

            danblack Daniel Black added a comment - As luck would have it, 5.2 complains if we use std::isfinite(): /home/anton/mariadb-server/sql/item_func.h:235:17: error: expected unqualified-id before ‘(’ token return std::isfinite(value) ? value : raise_float_overflow(); And 6.0 complains if we use isfinite(): /home/anton/mariadb-server/sql/item_func.h:235:26: error: ‘isfinite’ was not declared in this scope return isfinite(value) ? value : raise_float_overflow();

            Is gcc-6.0 the only compiler that complains about isfinite?
            Then I'll wait till the first 6.0 release before fixing this.

            serg Sergei Golubchik added a comment - Is gcc-6.0 the only compiler that complains about isfinite? Then I'll wait till the first 6.0 release before fixing this.

            People

              serg Sergei Golubchik
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.